--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "echarts": "^5.3.0",
+    "echarts-for-react": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
