--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "echarts": "^5.3.0",
     "echarts-for-react": "^3.0.2",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
