--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "lodash.clonedeep": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
